# Vibe-Trace

./: .gitattributes  .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml  ruff.toml
src/vibe_trace/: __init__.py  archive.py  config.py  discovery.py  index.py  inspect.py  naming.py  server.py
