[project]
name = "vibe-trace"
version = "1.0.0"
description = "Agent sessions archive and MCP server for vibe-coding agent traces."
readme = "README_EN.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Vinay Umrethe", email = "umrethevinay@gmail.com" },
]
keywords = ["mcp", "llm", "agent", "trace", "archive", "coding-agent", "vibe-coding"]
dependencies = [
    "filelock>=3.24.0",
    "mcp>=1.27.1",
    "pyarrow>=22.0.0",
    "rich>=14.3.0",
]

[project.urls]
Homepage = "https://github.com/Vinay-Umrethe/Vibe-Trace"
Documentation = "https://github.com/Vinay-Umrethe/Vibe-Trace"
Repository = "https://github.com/Vinay-Umrethe/Vibe-Trace.git"
Issues = "https://github.com/Vinay-Umrethe/Vibe-Trace/issues"

[project.scripts]
vibe-trace = "vibe_trace.server:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "vibe_trace"
